--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@graphql-codegen/typescript-operations": "^2.3.4",
     "apollo-angular": "^3.0.0",
     "graphql": "15.8.0",
+    "ngx-owl-carousel-o": "^7.0.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
