--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/filepond/dist/filepond.min.css", 
+              "./node_modules/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css",
               "src/styles/main.scss"
             ],
             "scripts": []
@@ -42,7 +44,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
