add filepond drag and drop

--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "@graphql-codegen/typescript-apollo-angular": "^3.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.4",
     "apollo-angular": "^3.0.0",
+    "filepond": "^4.30.3",
+    "filepond-plugin-file-validate-type": "^1.2.6",
+    "filepond-plugin-image-preview": "^4.6.10",
     "fuse.js": "^6.5.3",
     "graphql": "15.8.0",
+    "ngx-filepond": "^6.0.1",
     "ngx-owl-carousel-o": "^7.0.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
