--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@apollo/client": "^3.5.10",
+    "@casl/ability": "^5.4.3",
+    "@casl/angular": "^6.0.0",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/schema-ast": "^2.4.1",
     "@graphql-codegen/typescript-apollo-angular": "^3.4.5",
