--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@graphql-codegen/typescript-operations": "^2.3.4",
     "apollo-angular": "^3.0.0",
     "filepond": "^4.30.3",
+    "filepond-plugin-file-validate-size": "^2.2.5",
     "filepond-plugin-file-validate-type": "^1.2.6",
     "filepond-plugin-image-preview": "^4.6.10",
     "fuse.js": "^6.5.3",
