add href to build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href https://vulnerabbity.github.io/bug-market-angular/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "codegen": "graphql-codegen",
