--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production --base-href https://vulnerabbity.github.io/bug-market-angular/",
+    "build:prod": "ng build --configuration production",
+    "deploy": "ng build --configuration production && node server.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "codegen": "graphql-codegen",
@@ -32,6 +33,7 @@
     "@graphql-codegen/typescript-apollo-angular": "^3.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.4",
     "apollo-angular": "^3.0.0",
+    "express": "^4.17.3",
     "filepond": "^4.30.3",
     "filepond-plugin-file-validate-size": "^2.2.5",
     "filepond-plugin-file-validate-type": "^1.2.6",
