--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "ng build --configuration production",
-    "deploy": "ng build --configuration production && node server.js",
+    "start:prod": "node server.js",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "codegen": "graphql-codegen",
@@ -18,7 +17,7 @@
     "@angular/animations": "~13.1.0",
     "@angular/cdk": "13.2.6",
     "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
+    "@angular/compiler": "^13.3.2",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "13.2.6",
