--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "api-version": "1.2.3",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:prod": "node server.js",
+    "start:dev": "ng serve",
+    "start": "node server.js",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
