--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@graphql-codegen/typescript-apollo-angular": "^3.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.4",
     "apollo-angular": "^3.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "filepond": "^4.30.3",
     "filepond-plugin-file-validate-size": "^2.2.5",
