--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/animations": "~13.1.0",
     "@angular/cdk": "13.2.6",
     "@angular/common": "~13.1.0",
-    "@angular/compiler": "^13.3.2",
+    "@angular/compiler-cli": "^13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "13.2.6",
@@ -48,8 +48,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "^13.3.2",
-    "@angular/compiler-cli": "^13.3.2",
+    "@angular/cli": "13.1.0",
+    "@angular/compiler": "^13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -59,6 +59,7 @@
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "path": "^0.12.7",
     "typescript": "~4.5.2"
   }
 }
