--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-filepond": "^6.0.1",
     "ngx-owl-carousel-o": "^7.0.2",
     "rxjs": "~7.4.0",
+    "socket.io-client": "^4.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
