add ngx-infinite-scroll dependency

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fuse.js": "^6.5.3",
     "graphql": "15.8.0",
     "ngx-filepond": "^6.0.1",
+    "ngx-infinite-scroll": "^13.0.1",
     "ngx-owl-carousel-o": "^7.0.2",
     "rxjs": "~7.4.0",
     "socket.io-client": "^4.4.0",
